ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
   name: minimalIngress
   annotations:
      nginx.ingress.kubernetes.io/rewrite-target: /
spec:
   ingressClassName: nginx-example
   rules:
      - http:
         paths:
            - path: /auth
              pathType: prefix
              backend:
                 service:
                    name: auth-app
                    port: 
                       number: 8080
